--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -1,5 +1,19 @@
 {
   "dependencies": {
     "prompt-sync": "^4.2.0"
-  }
+  },
+  "devDependencies": {
+    "jest": "^30.0.4"
+  },
+  "name": "javascript",
+  "version": "1.0.0",
+  "description": "",
+  "main": "AccessingElementsInArray.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
